src/objects/Available_Incentive_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Retains_RECs__c</fullName>
        <formula>Incentive_Offer__r.Agency_Retains_RECs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Retains RECs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>American_Made_Adder_W__c</fullName>
        <formula>Incentive_Offer__r.American_Made_Adder_W__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>American Made Adder ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>American_Made_Cap_kW__c</fullName>
        <formula>Incentive_Offer__r.American_Made_Cap_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>American Made Cap (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicable_Scenario__c</fullName>
        <label>Applicable Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applied_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Effective_Price__c</fullName>
        <formula>IF((Incentive_Applied__c || Applied_Manually__c) &amp;&amp; NOT(Opted_Out_Manually__c),
    true, false
)</formula>
        <inlineHelpText>This checkbox shows the outcome of all flags: Incentive Automatically Applied, Manually Applied, and Opt Out Manually</inlineHelpText>
        <label>Apply Effective Price?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Status__c</fullName>
        <label>Cash Flow Status</label>
        <picklist>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumption_Adjustment_Type__c</fullName>
        <formula>text(Incentive_Offer__r.Consumption_Adjustment_Type__c)</formula>
        <label>Consumption Adjustment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumption_Calculation_Adj_Permitted__c</fullName>
        <formula>Incentive_Offer__r.Consumption_Calculation_Adj_Permitted__c</formula>
        <label>Consumption Calculation Adj. Permitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Capped_by_Annual_Tax_Obligation__c</fullName>
        <formula>Incentive_Offer__r.Credit_Capped_by_Annual_Tax_Obligation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Capped by Annual Tax Obligation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Matching_Incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Matching Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Description__c</fullName>
        <formula>Incentive_Offer__r.Customer_Description__c</formula>
        <label>Customer Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Receives_RECs_Revenue__c</fullName>
        <formula>Incentive_Offer__r.Customer_Receives_RECs_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Receives RECs Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depreciation_Basis_Rate__c</fullName>
        <formula>Incentive_Offer__r.Depreciation_Basis_Rate__c</formula>
        <label>Depreciation Basis Rate (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depreciation_Year_1__c</fullName>
        <formula>Incentive_Offer__r.Depreciation_Year_1__c</formula>
        <label>Depreciation Year 1 (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depreciation_Year_2__c</fullName>
        <formula>Incentive_Offer__r.Depreciation_Year_2__c</formula>
        <label>Depreciation Year 2 (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depreciation_Year_3__c</fullName>
        <formula>Incentive_Offer__r.Depreciation_Year_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depreciation Year 3 (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_Dollar_Amount__c</fullName>
        <description>This is the dollar amount that is calculated during the pricing process, this is what is see on the customer facing documents.</description>
        <inlineHelpText>This is the dollar amount that is calculated during the pricing process, this is what is see on the customer facing documents.</inlineHelpText>
        <label>Effective Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_Cost_Basis__c</fullName>
        <formula>text(Incentive_Offer__r.Eligible_Cost_Basis__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible Cost Basis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Estimated_Consumption__c</fullName>
        <formula>if( Consumption_Calculation_Adj_Permitted__c 
  ,System_Design_Quote__r.Annual_Electricity_Consumption_kWh__c +  System_Design_Quote__r.Forecasted_Add_Ann_Consumption_kW__c 

  ,System_Design_Quote__r.Annual_Electricity_Consumption_kWh__c

)</formula>
        <label>Eligible Estimated Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_Financing_Type__c</fullName>
        <formula>text(Incentive_Offer__r.Eligible_Financing_Type__c)</formula>
        <label>Eligible Financing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Sector__c</fullName>
        <formula>text(Incentive_Offer__r.Eligible_Sector__c)</formula>
        <label>Eligible Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Incentive_Offer__r.End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_of_First_Payment__c</fullName>
        <label>Estimated Date of First Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_to_Payment__c</fullName>
        <label>Estimated Days to Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_Month__c</fullName>
        <label>Estimated Payment Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_Year_Offset__c</fullName>
        <label>Estimated Payment Year Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_In_Tariff_Annual_Earnings_After_Tax__c</fullName>
        <label>Feed In Tariff Annual Earnings After Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Rebate_Amount__c</fullName>
        <formula>Incentive_Offer__r.Flat_Rebate_Amount__c</formula>
        <label>Flat Rebate Amount ($)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historic_Trust_Exclusion__c</fullName>
        <formula>Incentive_Offer__r.Historic_Trust_Exclusion__c</formula>
        <label>Historic Trust Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementing_Sector__c</fullName>
        <formula>text(Incentive_Offer__r.Implementing_Sector__c)</formula>
        <label>Implementing Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Active__c</fullName>
        <formula>Incentive_Offer__r.Active__c</formula>
        <label>Incentive Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is driven only by the matching criteria and the exclusions questions.  When &quot;Apply Manually&quot; or &quot;Opt Out Manually&quot; are changed, they will not effect the state of this field.</inlineHelpText>
        <label>Incentive Automatically Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incentive Offer</label>
        <referenceTo>Incentive_Offer__c</referenceTo>
        <relationshipLabel>SDQ Available Incentive Offers</relationshipLabel>
        <relationshipName>SDQ_Available_Incentive_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Recipient__c</fullName>
        <formula>text( Incentive_Offer__r.Incentive_Recipient__c )</formula>
        <label>Incentive Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Allowable_Tax_Credit__c</fullName>
        <formula>Incentive_Offer__r.Maximum_Allowable_Tax_Credit__c</formula>
        <label>Maximum Allowable Tax Credit ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Azimuth__c</fullName>
        <formula>Incentive_Offer__r.Maximum_Azimuth__c</formula>
        <label>Maximum Azimuth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Eligible_Estimated_Consumption__c</fullName>
        <formula>Eligible_Estimated_Consumption__c *  Maximum_Proportion_of_Consumption__c</formula>
        <label>Maximum Eligible Estimated Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Eligible_System_Size_kW__c</fullName>
        <formula>Incentive_Offer__r.Maximum_Eligible_System_Size_kW__c</formula>
        <label>Maximum Eligible System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Proportion_of_Consumption__c</fullName>
        <formula>Incentive_Offer__r.Maximum_Proportion_of_Consumption__c</formula>
        <label>Maximum Proportion of Consumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Proportion_of_Total_Cost__c</fullName>
        <formula>Incentive_Offer__r.Maximum_Proportion_of_Total_Cost__c</formula>
        <label>Maximum Proportion of Total Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Tilt__c</fullName>
        <formula>Incentive_Offer__r.Maximum_Tilt__c</formula>
        <label>Maximum Tilt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Azimuth__c</fullName>
        <formula>Incentive_Offer__r.Minimum_Azimuth__c</formula>
        <label>Minimum Azimuth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Eligible_System_Size_kW__c</fullName>
        <formula>Incentive_Offer__r.Minimum_Eligible_System_Size_kW__c</formula>
        <label>Minimum Eligible System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Standard_TSRF__c</fullName>
        <formula>Incentive_Offer__r.Minimum_Standard_TSRF__c</formula>
        <label>Minimum Standard TSRF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Tilt__c</fullName>
        <formula>Incentive_Offer__r.Minimum_Tilt__c</formula>
        <label>Minimum Tilt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod_Home_Value_Mod_Income_Adder_W__c</fullName>
        <formula>Incentive_Offer__r.Mod_Home_Value_Mod_Income_Adder_W__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mod Home Value/Mod Income Adder ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mod_Home_Value_Mod_Income_Cap_kW__c</fullName>
        <formula>Incentive_Offer__r.Mod_Home_Value_Mod_Income_Cap_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mod Home Value/Mod Income Cap (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_per_Payment__c</fullName>
        <label>Months per Payment</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Natural_Disaster_Adder_W__c</fullName>
        <formula>Incentive_Offer__r.Natural_Disaster_Adder_W__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Natural Disaster Adder ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Natural_Disaster_Cap_kW__c</fullName>
        <formula>Incentive_Offer__r.Natural_Disaster_Cap_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Natural Disaster Cap (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Matched_Reason__c</fullName>
        <label>Not Matched Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opted_Out_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opted Out Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PBI_Amount__c</fullName>
        <formula>Incentive_Offer__r.PBI_Amount__c</formula>
        <label>PBI Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Type__c</fullName>
        <label>Payment Date Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Receipt_Exclusion__c</fullName>
        <formula>Incentive_Offer__r.Previous_Receipt_Exclusion__c</formula>
        <label>Previous Receipt Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_Requirement__c</fullName>
        <formula>Incentive_Offer__r.Primary_Residence_Requirement__c</formula>
        <label>Primary Residence Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revocable_Trust_Exclusion__c</fullName>
        <formula>Incentive_Offer__r.Revocable_Trust_Exclusion__c</formula>
        <label>Revocable Trust Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAC_Eligible__c</fullName>
        <formula>Incentive_Offer__r.SAC_Eligible__c</formula>
        <label>SAC Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_Panel_Capped__c</fullName>
        <formula>Incentive_Offer__r.Size_Panel_Capped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size Panel Capped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Incentive_Offer__r.Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote__c</fullName>
        <label>System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>Available Incentive Offers</relationshipLabel>
        <relationshipName>Available_Incentive_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_Size_Units__c</fullName>
        <formula>text(Incentive_Offer__r.System_Size_Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSRF_Adjustment_Type__c</fullName>
        <formula>text(Incentive_Offer__r.TSRF_Adjustment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSRF Adjustment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Rate__c</fullName>
        <formula>Incentive_Offer__r.Tax_Credit_Rate__c</formula>
        <label>Tax Credit Rate (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Incentive_Rate_W__c</fullName>
        <formula>Incentive_Offer__r.Tier_1_Incentive_Rate_W__c</formula>
        <label>Tier 1 Incentive Rate ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_Maximum_System_Size_kW__c</fullName>
        <formula>Incentive_Offer__r.Tier_1_Maximum_System_Size_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1 Maximum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Incentive_Rate_W__c</fullName>
        <formula>Incentive_Offer__r.Tier_2_Incentive_Rate_W__c</formula>
        <label>Tier 2 Incentive Rate ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Maximum_System_Size_kW__c</fullName>
        <formula>Incentive_Offer__r.Tier_2_Maximum_System_Size_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 2 Maximum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Pricing_Type__c</fullName>
        <formula>text(Incentive_Offer__r.Tier_Pricing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Pricing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Matching_Required__c</fullName>
        <formula>Incentive_Offer__r.Utility_Company_Matching_Required__c</formula>
        <label>Utility Company Matching Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Available Incentive Offer</label>
    <nameField>
        <label>Available Incentive Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Incentive Offers</pluralLabel>
    <recordTypes>
        <fullName>Depreciation</fullName>
        <active>true</active>
        <label>Depreciation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feed_In_Tariff</fullName>
        <active>true</active>
        <label>Feed In Tariff</label>
    </recordTypes>
    <recordTypes>
        <fullName>PBI</fullName>
        <active>true</active>
        <label>PBI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate</fullName>
        <active>true</active>
        <label>Rebate ($)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_W</fullName>
        <active>true</active>
        <label>Rebate ($/W)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Credit</fullName>
        <active>true</active>
        <label>Tax Credit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;, false, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
        <errorMessage>Record is part of a closed Contract, and is locked from further editing</errorMessage>
    </validationRules>
</CustomObject>